--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 anyio==3.6.1
 asgiref==3.5.1
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
 click==8.1.3
 fastapi==0.78.0
 greenlet==1.1.2
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
-pkg_resources==0.0.0
+importlib-metadata==4.11.4
+importlib-resources==5.7.1
+Mako==1.2.0
+MarkupSafe==2.1.1
 psycopg2-binary==2.9.3
 pydantic==1.9.0
 python-dotenv==0.20.0
 PyYAML==6.0
+requests==2.27.1
 sniffio==1.2.0
 SQLAlchemy==1.4.36
 starlette==0.19.1
 typing_extensions==4.2.0
+urllib3==1.26.9
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
